2016-02-06  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/Makefile.am:
	* plugins/actions/template/Makefile.am:
	* plugins/actions/template/template.cc:
	* plugins/actions/template/template.se-plugin.in:
	Fix bug #19010 : subtitleeditor needs a style template system for all formats.

2016-02-05  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	* share/appdata/subtitleeditor.appdata.xml:
	Add keywords.

2016-02-05  kitone  <kitone@gna.org>

	* configure.ac:
	Bump dependence of gtkmm from 3.0 to 3.10

2016-02-05  kitone  <kitone@gna.org>

	* configure.ac:
	Fix bug #23714 : glibmm 2.45.40 requires C++11 -- please build with C++11 support

2016-02-05  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/documentmanagement/documentmanagement.cc:
	Fix bug #23714 : include memory and build string using compose.

2016-02-05  kitone  <kitone@gna.org>

	* src/subtitleview.cc:
	* src/utility.h:
	Fix bug #23714 : Explicit cast. patch by Philip Rinn <rinni>

2016-02-03  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	Fix bug #24302 : FPS Field in change Framerate dialog not editable anymore. Port to gtk3 and fix regression.

2015-07-29  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking.ui:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	Fix bug #23727 : Error Checking should close on pressing Escape.

2015-07-28  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/movesubtitles.cc:
	Fix bug #23718 : Move plugin should remember the checkbox to only move selected.

2015-07-28  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	Fix bug #23706 : Error checking preferences should be the same in preferences and error checking.. (Patch by Tomáš Hnyk)

2015-07-28  kitone  <kitone@gna.org>

	* configure.ac: