@@ -18,7 +18,7 @@
     <property name="lower">1</property>
     <property name="upper">999</property>
     <property name="value">1</property>
-    <property name="step_increment">0.1</property>
+    <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment-max-line-per-subtitle">
@@ -31,7 +31,7 @@
     <property name="lower">1</property>
     <property name="upper">999</property>
     <property name="value">1</property>
-    <property name="step_increment">0.1</property>
+    <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment-min-display-sub">
@@ -1140,6 +1140,23 @@
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="top_attach">5</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="check-ignore-space">
+                                <property name="label" translatable="yes">_Ignore space in subtitle</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">This setting takes effect only after Subtitle Editor is restarted</property>
+                                <property name="use_underline">True</property>
+                                <property name="xalign">0</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">6</property>
+                                <property name="width">2</property>
                               </packing>
                             </child>
                           </object>
